--- a/Introduction-To-NumPy.ipynb
+++ b/Introduction-To-NumPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +350,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "df =  pd.DataFrame(a2)"
    ]
   },
@@ -911,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,16 +932,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ones = np.ones(3)"
+    "ones = np.ones(3)\n",
+    "ones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +962,7 @@
        "array([2., 3., 4.])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
